examples/gallery/errors/violated_ensures_wrong_postcondition.fsl
// expected-command: verify --depth 2
// expected-result: violated
// expected-kind: ensures
spec GalleryViolatedEnsuresWrongPostcondition {
  state { x: Int }
  init { x = 0 }
  action inc() {
    x = x + 1
    ensures x == old(x) + 2
  }
}
